--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -88,14 +88,18 @@ hr{
 .mb-16{margin-bottom: 16px;}
 .ml-16{margin-left: 16px;}
 
+.mb-28{margin-bottom: 28px;}
+
 .m-32{margin: 32px;}
 .mt-32{margin-top: 32px;}
 .mb-32{margin-bottom: 32px;}
 
 .mt-64{margin-top: 64px;}
 .mb-64{margin-bottom: 64px;}
+.m-0{margin: 0 !important;}
 
 .p-8{padding: 8px;}
+.p-12{padding: 12px;}
 .p-16{padding: 16px;}
 .p-0{padding: 0 !important;}
 .p-0-16{padding: 0 16px;}
@@ -107,6 +111,8 @@ hr{
 .p-32{padding: 32px;}
 .p-16-0-32-0{padding: 16px 0 32px 0;}
 .p-32-0-16-0{padding: 32px 0 16px 0;}
+.p-0-16-16-16{padding: 0 16px 16px 16px;}
+.p-72-16-16-16{padding: 72px 16px 16px 16px;}
 .pl-0{padding-left: 0 !important;}
 
 .m-0--16{margin: 0 -16px;}
@@ -703,9 +709,42 @@ a.btn{
 	}
 }
 
+.btn-3{
+	cursor: pointer;
+	display: flex;
+	background: rgba(48, 52, 56, 0.25);
+	transition: all 0.1s ease 0s;
+	border-radius: 99px;
+	&:hover{
+		transition: all 0.1s ease 0s;
+		background: rgba(48, 52, 56, 1);
+	}
+	svg{
+		fill: $white;
+	}
+}
+
+.btn-4{
+	padding: 8px 24px;
+	background-color: $red;
+	color: $white;
+	border-radius: 99px;
+	cursor: pointer;
+	&:hover{
+		opacity: 0.8;
+	}
+}
+
 .link{
 	color: $red;
 	@extend .text-default;
+}
+
+.link-2{
+	background-color: transparent;
+	&:hover{
+		text-decoration: underline;
+	}
 }
 
 ///////////////////////////// INPUT ///////////////////////////////////
@@ -755,6 +794,8 @@ a.btn{
 		border: 2px solid $divider;
 		border-radius: 12px;
 		padding: 14px;
+		height: 56px;
+		padding: 13px 14px;
 		width: 100%;
 		font-size: 20px;
 		line-height: 24px;
@@ -1188,6 +1229,19 @@ ul.list-ul{
 	border-radius: 12px;
 }
 
+.bb{
+	position: relative;
+	&:after{
+		content: "";
+		position: absolute;
+		left: 16px;
+		right: 16px;
+		bottom: 0;
+		height: 2px;
+		background-color: $divider;
+	}
+}
+
 .showHidePassword{
 	position: absolute;
 	right: 16px;
@@ -1228,6 +1282,33 @@ ul.list-ul{
 	@media (max-width:$md3+px) {
 	    position: static;
 	}
+}
+
+.horizontalScroller{
+	::-webkit-scrollbar {
+    	width: 12px;
+    	height: 12px;
+   		background-color: $lightGray;
+   		border-radius: 8px;
+   		@media (max-width:$md3+px) {
+   		    display: none;
+   		}
+	}
+
+	::-webkit-scrollbar-thumb {
+	    background-color: rgba(171, 178, 186, 0.5);
+	    border-radius: 8px;
+	    @media (max-width:$md3+px) {
+   		    display: none;
+   		}
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+	    background-color: $darkGray;
+	}
+
+	scrollbar-color: #999#333;
+    scrollbar-width: thin;
 }
 
 ///////////////////////////////////////////////////////////////////
