--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -81,6 +81,6 @@ $boxShadow: 0px 0px 40px rgba(69, 76, 84, 0.08);
 @import "import/_select2-user"; // Изменения в стилях select2
 @import "import/_scroll";
 @import "import/_popups";
-@import "import/test"; // Для теста
+//@import "import/test"; // Для теста
 
 // --------------------------------------------------------
