--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -37,7 +37,7 @@
 		.btnSec{
 			margin-left: 8px;
 		}
-		@media (max-width:$md_1045+px) {
+		@media (max-width:1100+px) {
 			display: none;
 			z-index: 40;
 		    position: absolute;
@@ -77,7 +77,7 @@
 	}
 	&__logo{
 		.burger{display: none;}
-		@media (max-width:$md_1045+px) {
+		@media (max-width:1100+px) {
 		    display: flex;
 		    align-items: center;
 		    .burger{
@@ -106,6 +106,7 @@
 //////////////////////////// rkl ////////////////////////////
 
 .rkl{
+	display: block;
 	background-color: $red;
 	color: $white;
 }
@@ -433,11 +434,11 @@
 .personal{
 	&__header{
 		@media (max-width:$md_1045+px) {
-			flex-direction: column-reverse;
+			flex-direction: column;
 			align-items: flex-start;
 			justify-content: flex-start;
 			.btnSec{
-				margin-bottom: 16px;
+				margin-top: 16px;
 				width: 100%;
 			}
 		}
@@ -485,14 +486,14 @@
 		padding: 8px;
 		display: flex;
 		align-items: center;
-		@media (max-width:$md3+px) {
+		@media (max-width:$md2+px) {
 		    flex-wrap: wrap;
 		}
 	}
 	&__col {
 		padding: 8px;
 		flex: 0 0 50%;
-		@media (max-width:$md3+px) {
+		@media (max-width:$md2+px) {
 		    flex: 0 0 100%;
 		}
 	}
@@ -501,6 +502,31 @@
 		overflow: hidden;
 		img{
 			width: 100%;
+		}
+		@media (min-width:$md3+px) and (max-width:$md2+px) {
+			text-align: center;
+			img{
+				max-width: 768px;
+			}
+		}
+	}
+	&.mod-v2{
+		@media (max-width:$md2+px) {
+			.result21__row{
+				flex-wrap: wrap-reverse;
+				padding-bottom: 0;
+			}
+			.result21__col{
+				padding-bottom: 0;
+			}
+		}
+		@media (min-width:$md2+px) {
+			.result21__col:first-child{
+				align-self: flex-end;
+			}
+			.result21__image{
+				margin-bottom: -16px;
+			}
 		}
 	}
 }
@@ -825,6 +851,9 @@
 		@media (max-width:$md3+px) {
 		    flex: 0 0 100%;
 		}
+		@media (max-width:$md4+px) {
+		    padding: 16px;
+		}
 	}
 	&__image{
 		flex: 1;
@@ -843,6 +872,12 @@
 				width: 578px;
 				height: 408px;
 			}
+		}
+	}
+	.btn{
+		@media (max-width:$md4+px) {
+		    width: 100%;
+		    padding: 10px;
 		}
 	}
 }
@@ -1828,14 +1863,21 @@
 		    padding: 16px 32px 16px 8px;
 		}
 	}
-	&:after{
+	&:after, &:before{
 		content: "";
 		position: absolute;
+		z-index: 10;
 		top: 0;
-		left: 0;
 		width: 16px;
 		height: 100%;
+	}
+	&:after{
+		left: 0;
 		background: linear-gradient(270deg, rgba(255,255,255,0),rgba(255,255,255,1));
+	}
+	&:before{
+		right: 0;
+		background: linear-gradient(270deg, rgba(255,255,255,1),rgba(255,255,255,0));
 	}
 }
 
@@ -1958,8 +2000,8 @@
 		overflow: hidden;
 		color: $white;
 		position: relative;
-		@media (min-width:$md3+px) and (max-width:$md2+px) {
-			padding-left: 64px;
+		@media (min-width:$md3+px) and (max-width:1150+px) {
+			padding: 96px 32px 32px 32px;
 		}
 		@media (max-width:$md4+px) {
 		    padding-left: 64px;
@@ -1973,8 +2015,11 @@
 		height: 100%;
 		z-index: 3;
 		border-right: 4px dashed $white;
-		@media (min-width:$md3+px) and (max-width:$md2+px) {
-			width: 48px;
+		@media (min-width:$md3+px) and (max-width:1150+px) {
+			width: 100%;
+			height: 76px;
+			border-right: none;
+			border-bottom: 4px dashed $white;
 		}
 		@media (max-width:$md4+px) {
 		    width: 48px;
@@ -1987,9 +2032,25 @@
 			height: 40px;
 			background-color: $white;
 			border-radius: 50%;
+			@media (min-width:$md3+px) and (max-width:1150+px) {
+				bottom: -21px;
+				right: auto;
+			}
 		}
-		&:after{top: -20px;}
-		&:before{bottom: -20px;}
+		&:after{
+			top: -20px;
+			@media (min-width:$md3+px) and (max-width:1150+px) {
+				right: -20px;
+				top: auto;
+			}
+		}
+		&:before{
+			bottom: -20px;
+			@media (min-width:$md3+px) and (max-width:1150+px) {
+				bottom: -21px;
+				left: -20px;
+			}
+		}
 	}
 	&__bg{
 		position: absolute;
