--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -752,6 +752,7 @@
 		}
 		&.col-2 {
 			flex: 1 1 auto;
+			align-self: flex-end;
 		}
 	}
 	&__content {
@@ -837,6 +838,20 @@
 			}
 			tr:last-child>td{
 				padding-bottom: 16px;
+			}
+		}
+		&.table-2, &.table-3{
+			.image1 img{
+				margin-top: -23%;
+				@media (max-width:$md3+px) {
+				    margin-top: -23%;
+				}
+			}
+			.image2 img{
+				margin-top: -23%;
+				@media (max-width:$md3+px) {
+				    margin-top: -23%;
+				}
 			}
 		}
 	}
