Доработки: favicon, fonts

--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -68,6 +68,12 @@ hr{
 	background-color: $divider;
 }
 
+h1, h2{
+	> span{
+		display: block;
+	}
+} 
+
 ///////////////////// MARGIN-PADDING //////////////////////
 
 .m-4{margin: 4px;}
