slick на главной, правки текста

--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -1198,6 +1198,13 @@ ul.list-ul{
 }
 //////////////// ДОПОЛНИТЕЛЬНЫЕ ЭЛЕМЕНТЫ, LABEL, LIST ///////////////////
 
+.ibg{
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	img{display: none;}
+}
+
 .varticalDevider{
 	position: relative;
 	height: 24px;
