--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -2282,11 +2282,13 @@
 		}
 	}
 	&__slider{
+		overflow: hidden;
 		@extend .posa;
 	}
 	&__image {
 		width: 100%;
 		height: 100%;
+		display: flex;
 		img{
 			width: 100%;
 			height: 100%;
