--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -1780,6 +1780,11 @@
 			display: flex;
 			flex-direction: column;
 		}
+		transition: all 0.2s ease 0s;
+		&:hover{
+			transition: all 0.2s ease 0s;
+			transform: translateY(-8px);
+		}
 	}
 	&__body{
 		position: relative;
