Изменения страниц Вход и регистрация

--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -900,6 +900,13 @@ a.btn{
 			display: none;
 		}
 	}
+	&__link{
+		position: absolute;
+		right: 16px;
+		color: $darkGray;
+		top: 50%;
+		transform: translateY(-50%);
+	}
 }
 
 .inputTextBtn{
