--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -1998,6 +1998,20 @@
 		    box-shadow: none;
 		}
 	}
+	&__line{
+		display: flex;
+		justify-content: space-between;
+		> * {
+			flex: 0 0 calc(50% - 4px);
+			height: 4px;
+			margin: 0 2px;
+			border-radius: 99px;
+			background-color: $divider;
+			&.active{
+				background-color: $red;
+			}
+		}
+	}
 }
 
 //////////////////// Способы доставки /////////////////////
