--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -66,6 +66,19 @@ img{
 	}
 }
 
+.lazy{
+	height: 0px;
+	opacity: 0.5;
+	background-color: $lightGray;
+}
+
+.lazy.loaded{
+	height: auto;
+	padding-top: 0px !important;
+	opacity: 1;
+	transition: opacity 0.2s;
+}
+
 hr{
 	height: 1px;
 	background-color: $divider;
