--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -2721,16 +2721,45 @@
 	}
 }
 
-/////////////////////// rtl - сео блок //////////////////////////////
+///////////////////////// SEO - блок //////////////////////
+
+.rtl-wrap{
+	background-color: #F1F5F9;
+	&.pt-32{
+		padding-top: 32px;
+	}
+}
 
 .rtl{
+	font-size: 20px;
+	line-height: 24px;
+	max-width: 1343px;
+	margin: 0 auto;
+	padding: 0 16px;
+	color: #303438;
+	button{
+		font-size: 18px;
+		line-height: 21px;
+	}
+	img{
+		border-radius: 24px;
+		max-width:100%;
+		height:auto;
+	}
+	p{
+		line-height:1.4;
+	}
+	h2{
+		@extend .text-medium;
+	}
 	&.isHideContent{
 		h1{
+			color: $darkGray;
 			position: relative;
 			&:after{
 				content: "";
 				position: absolute;
-				bottom: 4px;
+				bottom: 0;
 				left: 0;
 				width: 100%;
 				height: 100%;
@@ -2748,7 +2777,6 @@
 		}
 	}
 	&__showLess{
-		color: $red;
 		background-color: transparent;
 		&:hover{
 			text-decoration: underline;
@@ -2761,12 +2789,19 @@
 			text-decoration: underline;
 		}
 		display: none;
+		&.darkGray{
+			color: $darkGray !important;
+		}
 	}
-	h1{ @extend .text-huge; }
-	img{ border-radius: 16px; }
+	h1, .text-huge{
+		font-weight: 500;
+		font-size: 40px;
+		line-height: 48px;
+	}
 	.maxH-300{ max-height: 300px; }
 	.maxH-700{ max-height: 700px; }
-
+	.w-100{width: 100%;}
+	.ml-16{margin-left: 16px;}
 	.img-800{
 		width: 800px;
 		max-height: 800px;
@@ -2789,15 +2824,14 @@
 		    width: 100%;
 		}
 	}
-
 	.row-image{
 		display: flex;
 		flex-wrap: wrap;
-		margin: -8px -8px 8px -8px;
+		margin: -8px -8px 8px -8px !important;
 		&__col{
 			flex: 0 0 50%;
 			padding: 8px;
-			@media (max-width:$md3+px) {
+			@media (max-width:768+px) {
 			    flex: 0 0 100%;
 			    img:first-child{
 			    	margin-bottom: 16px;
@@ -2813,9 +2847,9 @@
 		clear: both;
 	}
 	.pro-tip{
-		background-color: $white;
+		background-color: #FFF;
 		padding: 16px;
-		border-radius: 16px;
+		border-radius: 24px;
 		&__logo{
 			width: 80px;
 			height: 80px;
@@ -2823,9 +2857,10 @@
 			border-radius: 99px;
 		}
 	}
-	.dropdown{
-		padding: 0 !important;
+	@media (max-width:$md3+px) {
+	    font-size: 16px;
+	    line-height: 1.4;
 	}
 }
 
-/////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////
