Изменилась страница профессионалам, обновил иконку тг (как надо)

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -47,6 +47,8 @@ $violet: #735CE6;
 $lightViolet: #EFECFF;
 $pink: #FF93C1;
 $lightPink: #FFEAF3;
+$hotPink: #F018C1;
+$lightHotPink: #FFDEF8;
 
 $divider: #EAF0F6;
 $boxShadow: 0px 0px 40px rgba(69, 76, 84, 0.08);
