--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -1582,6 +1582,10 @@
 		background-color: $lightPink;
 		.text-medium{color: $pink;}
 	}
+	&.v8{
+		background-color: $lightHotPink;
+		.text-medium{color: $hotPink;}
+	}
 	&.mod-v2{
 		align-items: flex-start;
 		justify-content: start;
@@ -2860,6 +2864,117 @@
 	@media (max-width:$md3+px) {
 	    font-size: 16px;
 	    line-height: 1.4;
+	}
+}
+
+///////////////////// Профессионалам ////////////////////////
+
+.professionalPartnership{
+	padding: 160px 16px 0 16px;
+	@media (max-width:$md4+px) {
+	    padding-top: 110px;
+	}
+}
+
+.professionalMod3{
+	.bottomLil{
+		align-items: flex-start;
+		&__1{
+			margin-bottom: 16px;
+		}
+		&__2{
+			margin-right: 0;
+			margin-left: 32px;
+		}
+	}
+	@media (max-width:$md3+px) {
+		width: 100%;
+	    display: flex;
+	    justify-content: flex-end;
+	}
+}
+
+.professionalMod4{
+	padding: 0;
+	display: flex;
+	min-height: 450px;
+	overflow: hidden;
+	position: relative;
+	@media (max-width:$md4+px) {
+	    flex-direction: column;
+	}
+	&__content{
+		width: 50%;
+		position: relative;
+		z-index: 2;
+		padding: 32px 0 32px 32px;
+		@media (min-width:$md4+px) and (max-width:1280px) {
+			padding: 0;
+			width: 100%;
+		}
+		@media (max-width:$md4+px) {
+			width: 100%;
+			padding: 16px;
+		}
+		.topLil{
+			@media (min-width:$md4+px) and (max-width:1280px) {
+				padding: 32px;
+			}
+		}
+	}
+	&__text{
+		@media (min-width:$md4+px) and (max-width:1280px) {
+			padding: 32px;
+		    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 32.58%, #FFFFFF 99.47%);
+		}
+		@media (min-width:$md4+px) and (max-width:860+px) {
+			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0.68%, rgba(255, 255, 255, 1) 32.58%, #FFFFFF 99.47%);
+		}
+	}
+	&__image{
+		@media (min-width:$md4+px){
+			position: absolute;
+			top: 0;
+			right: 0;
+			height: 100%;
+			width: 405px;
+		}
+		@media (max-width:$md4+px) {
+			width: 100%;
+		    height: auto;
+		}
+	}
+}
+
+.professionalMod5{
+	@media (max-width:$md4+px) {
+	    padding: 16px;
+	}
+}
+
+.weAreKnown{
+	position: relative;
+	border-radius: 24px;
+	overflow: hidden;
+	&__body{
+		position: relative;
+		z-index: 2;
+		padding: 0 16px 16px 16px;
+		background: rgba(0, 0, 0, 0.15);
+	}
+	&__bg{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		img{
+			width: 100%;
+			height: 100%;
+		}
+	}
+	&__first{
+		transform: translateY(-2px);
 	}
 }
 
