Блок "Будьте в курсе!"

--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -302,6 +302,7 @@ h1, h2{
 .bg-white{background-color: $white !important;}
 .bg-gold{background-color: $gold !important;}
 .bg-lightGray{background-color: $lightGray !important;}
+.brad-24{border-radius: 24px;}
 
 ///////////////////////// FLEX ////////////////////////////
 
