Попап после нажатия на кнопку "Мне повезёт!"

--- a/#src/scss/import/_popups.scss
+++ b/#src/scss/import/_popups.scss
@@ -120,7 +120,7 @@
 
 ////////////////////////// Попап prizeReceive //////////////////////////
 
-#prizeReceive{
+#prizeReceive, #prizeReceive2{
 	.popup__wrap{
 		overflow: visible;
 	}
