Изменения 2.0 | Проверка продукции

--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -258,6 +258,8 @@
 	}
 }
 
+
+
 ////////////////////////// review ///////////////////////////
 
 .reviews{
@@ -612,7 +614,24 @@
 	}
 }
 
-/////////////////////////// stick ///////////////////////////
+
+/////////////////////////// product-check ///////////////////////////
+
+.check{
+	@media (max-width:$md2+px) {
+	    flex-wrap: wrap;
+	    .check__col2{
+	    	flex: 0 0 100%;
+	    }
+	    .check__col1{
+	    	width: 100%;
+	    	flex-direction: row;
+	    }
+	}
+}
+
+
+/////////////////////////////// stick ///////////////////////////////
 
 .stick {
 	&__image{
